--- a/app/views/quizes/practice.html.erb
+++ b/app/views/quizes/practice.html.erb
@@ -7,16 +7,17 @@
 
 <!-- Content Wrapper -->
 <div class="challenge-content-wrapper ">
-<p style="margin-top:25px;margin-left:25px;margin-right:25px">In the code segment for each question, there is a single error on a single line.  
-	Correct the error by changing the fewest possible characters on the line. Do not make changes that are not needed to fix the code.  
-	Pay attention to any ASSERT functions; they must evaluate to TRUE for the code to be considered correct.
+<p style="margin-top:25px;margin-left:25px;margin-right:25px">	In the code segment for each question, there is an error on a single line.  
+		Correct the error by changing the fewest possible characters on that one line. Do not make changes that are not needed to fix the code.  
+		Some questions will include additional details or instructions in the comments.  For those questions where the code includes an ASSERT 
+		function, it must evaluate to TRUE for the code to be considered correct.
 	<br/><br/>Whoever answers the most answers correct the fastest is the winner. The number of correct answers is the more important factor, so don’t rush.
 	</p>
 <div class="editPane">
     <div id="editor"></div>
 </div>
 <div class="infoPane">
-    Question <span data-bind="text:curr() <= records.length-1 ? curr()+1 : records.length"></span> of <span data-bind="text: totalSize"></span><br/><br/>
+    Question <span id="questionNbr"></span> of 3<br/><br/>
     <span data-bind="text:language"></span><br/><br/><br/>
     Time This Question<br/>
     <div id="clock" class="stopwatch">
@@ -56,11 +57,22 @@
 
 	$('button').button();
 	$("#clock").stopwatch();
+	
+	$(document).ready(function() {
+		
+		var data = new Object();
+		data.url = fnGetUrl();
+		data.challengeId = '<%= params[:id] %>';
+		data.questionType = 'Practice';
+		ko.applyBindings(new Quiz(data, {editor:editor}));
+		
+		// prevent copy and paste
+	    $('#editor').bind('cut copy paste', function(event) {
+	        event.preventDefault();
+	    });
 
-	var data = new Object();
-	data.records = $.parseJSON('<%= @questions.to_json.html_safe %>');
-	data.totalSize = data.records.length;
-	ko.applyBindings(new Quiz(data, {editor:editor}, fnGetUrl()));
+	});
+	
 </script>
 
 
