--- a/app/views/quizes/practice.html.erb
+++ b/app/views/quizes/practice.html.erb
@@ -7,13 +7,15 @@
 
 <!-- Content Wrapper -->
 <div class="challenge-content-wrapper ">
-<p style="margin-top:25px;margin-left:25px;margin-right:25px">	In the code segment for each question, there is an error on a single line.  
+<p style="margin-top:25px;margin-left:25px;margin-right:25px">	
+	<%= link_to "Back to the Challenge", challenge_path(params[:id]) %><br/><br/>
+	In the code segment for each question, there is an error on a single line.  
 		Correct the error by changing the fewest possible characters on that one line. Do not make changes that are not needed to fix the code.  
 		Some questions will include additional details or instructions in the comments.  For those questions where the code includes an ASSERT 
 		function, it must evaluate to TRUE for the code to be considered correct.
 	<br/><br/>Whoever answers the most answers correct the fastest is the winner. The number of correct answers is the more important factor, so don’t rush. This practice pages cycles infinitely through 3 sample questions.
 	</p>
-<div class="editPane">
+<div class="editPane" style="padding-top:0px">
     <div id="editor"></div>
 </div>
 <div class="infoPane">
