--- a/app/views/quizes/show.html.erb
+++ b/app/views/quizes/show.html.erb
@@ -11,7 +11,7 @@
 <!-- Content Wrapper -->
 <div class="challenge-content-wrapper ">
 
-<div class="editPane">
+<div class="editPane" style="padding-top:0px">
     <div id="editor"></div>
 </div>
 <div class="infoPane">
