--- a/app/views/quiz_questions/reviewed.html.erb
+++ b/app/views/quiz_questions/reviewed.html.erb
@@ -5,7 +5,7 @@
 		</div>
 		<div class="widecolumn fr">
 
-			<h3>Quick Quick Questions Reviewed by You</h3>
+			<h3>Quick Quiz Questions Reviewed by You</h3>
 			<%= flash_messages %>
 			
 			<% if !@questions.empty? %>
