--- a/app/views/quiz_questions/authored.html.erb
+++ b/app/views/quiz_questions/authored.html.erb
@@ -5,7 +5,7 @@
 		</div>
 		<div class="widecolumn fr">
 
-			<h3>Quick Quick Questions Authored by <%= current_user.username %></h3>
+			<h3>Quick Quiz Questions Authored by <%= current_user.username %></h3>
 			<%= flash_messages %>
 			
 			<% if !@questions.empty? %>
