massaged some text

--- a/app/views/quizes/results.html.erb
+++ b/app/views/quizes/results.html.erb
@@ -52,7 +52,8 @@ $(".fancyanswer").fancybox({
 					<table style="margin-bottom:10px">
 						<tr>
 							<td style="padding-right:10px"><img src="/assets/answer-false.png" width="40"/></td>
-							<td>Click the red icons below to see the details of the questions that are marked as incorrect. You can only see your incorrect answers and not the answers of other members.</td>
+							<td>Click the red icons below to see the details of the questions that are marked as incorrect. You can only see the 
+								questions that you answered incorrectly and not the answers of other members.</td>
 						</tr>
 					</table>
 	
