changed to total_public_money__c

--- a/app/views/members/_member-sidebar.html.haml
+++ b/app/views/members/_member-sidebar.html.haml
@@ -45,7 +45,7 @@
         = @member["Total_Points__c"]
         %strong Total Points
       %li
-        = number_to_currency(@member["Total_Money__c"], :precision => 0)
+        = number_to_currency(@member["Total_Public_Money__c"], :precision => 0)
         %strong Total Money
   .achievements
 
