--- a/app/views/admin/blogfodder.html.erb
+++ b/app/views/admin/blogfodder.html.erb
@@ -8,7 +8,7 @@
 		
 	<p><%= link_to @challenge['Name'], challenge_url %></p>
 
-	<p>Top Prize: <%= @challenge['Top_Prize__c'] %></p>
+	<p>Total Prize Amount: <%= @challenge['Total_Prize_Money__c'] %></p>
 
 	<p><%= raw(@challenge['Description__c']) %></p>
 
