--- a/app/views/shared/_quickquiz-sidebar.html.erb
+++ b/app/views/shared/_quickquiz-sidebar.html.erb
@@ -12,7 +12,7 @@
 	<% end %>
 	
 	<span>View <%= link_to "all leaderboards", quizleaderboard_path(params[:id]) %> or the <%= link_to "daily winners", quizwinners_path(params[:id]) %>.</span>
-	<% if signed_in? %><p>Wanna see how a specific member did on a certain day? Plug the username and date into <%= link_to "this URL", quizresults_by_member_path(params[:id], current_user.username, DateTime.now.strftime("%m-%d-%Y")) %>.</p><% end %>
+	<% if signed_in? %><p>Wanna see how a specific member did on a certain day? Plug the username and date into <%= link_to "this URL", quizresults_by_member_path(params[:id], current_user.username, DateTime.now.strftime("%Y-%m-%d")) %>.</p><% end %>
 	<div style="margin-bottom:25px"></div>	
 	
 	<% rank = 0 %>
