--- a/app/views/members/_badgeProfile.html.erb
+++ b/app/views/members/_badgeProfile.html.erb
@@ -13,6 +13,9 @@
 
       });
   
+Badgeville.crouton = function(){};
+Badgeville.Settings.showToast = 0;
+
   Badgeville.setPlayer({
  		email: '<%= @member["Name"] %>@m.cloudspokes.com'}
 	  );
