--- a/app/views/members/_member-sidebar.html.haml
+++ b/app/views/members/_member-sidebar.html.haml
@@ -1,8 +1,10 @@
 .sidebar.fr
   .profile
-    %span
-      = render "badgeProfile"
-      %h3= @member["Country__c"]
+    %img.fl{:width => "100px", :height => "100px", :src =>  @member["Profile_Pic__c"]}
+    .profile-info.fl
+      %h4
+        %span= @member["Name"]
+      %span= @member["Country__c"]
     .cl= " "
     %p
       - if !@member["Summary_Bio__c"].nil?
