--- a/app/views/quizes/show.html.erb
+++ b/app/views/quizes/show.html.erb
@@ -5,8 +5,7 @@
 
 <div class="page-heading"><h2 class="melbourne"><%= @challenge_detail['Name'] %></h2></div>
 <p style="margin-top:25px;margin-left:25px;margin-right:25px">In the code segment for each question, there is an error on a single line.  
-	Correct the error by changing the fewest possible characters on that one line. Do not make changes that are not needed to fix the code.  
-	Some questions will include additional details or instructions in the comments.  For those questions where the code includes an ASSERT 
+	Correct the error by changing the fewest possible characters on that one line. Only change one ine. Do not make changes that are not needed to fix the code.  Some questions will include additional details or instructions in the comments.  For those questions where the code includes an ASSERT 
 	function, it must evaluate to TRUE for the code to be considered correct.</p>
 <!-- Content Wrapper -->
 <div class="challenge-content-wrapper ">
