--- a/app/views/accounts/payments.html.erb
+++ b/app/views/accounts/payments.html.erb
@@ -13,12 +13,14 @@
 			for specific payment dates for types of payment. If you have any questions, 
 			please contact us at <a href="mailto:support@cloudspokes.com">support@cloudspokes.com</a>.</p>
 
+			<% if current_user.username == 'jeffdonthemic' %>
 			<table>
 			<tr>
 				<td><%= image_tag "docusign-logo.png", :alt => "Docusign", :width => 125 %></td>
-				<td> In order for us to send your payments, you need to complete the appropriate tax form. If you are a <b>US citizen</b>, please <a href="<%= ENV['DOCUSIGN_SIGNING_DOMAIN']%>/sign/<%= @memberId %>/<%= current_user.username %>/99097A71-5EE0-43DD-A16F-6D0066983910/<%= current_user.email %>" target="_blank">complete this W-9 tax form</a>. If you are <b>not a US citizen</b>, please <a href="<%= ENV['DOCUSIGN_SIGNING_DOMAIN']%>/sign/<%= @memberId %>/<%= current_user.username %>/8197D537-7C7D-4144-B0F0-521BFA8F489B/<%= current_user.email %>" target="_blank">complete this W-8BEN tax form</a>. You only need to fill out this tax form once per year and we will keep it on file.</td>
+				<td> In order for us to send your payments, you need to complete the appropriate tax form. If you are a <b>US citizen</b>, please <a href="<%= ENV['DOCUSIGN_SIGNING_DOMAIN']%>/sign/<%= @memberId %>/<%= current_user.username %>/<%= ENV['DOCUSIGN_US_TAX_TEMPLATE']%>/<%= current_user.email %>" target="_blank">complete this W-9 tax form</a>. If you are <b>not a US citizen</b>, please <a href="<%= ENV['DOCUSIGN_SIGNING_DOMAIN']%>/sign/<%= @memberId %>/<%= current_user.username %>/<%= ENV['DOCUSIGN_INTL_TAX_TEMPLATE']%>/<%= current_user.email %>" target="_blank">complete this W-8BEN tax form</a>. You only need to fill out this tax form once per year and we will keep it on file.</td>
 			</tr>
 			</table><br/>
+			<% end %>
 
 			<div id="profile">
 				<%= form_for "/account/payments", :name => "form_payment", :method => "post", :html => { :multipart => true } do |f| %>
