--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -62,9 +62,10 @@
 		<% end %>
       </ul></nav>
       <nav id='side_menu'><ul>
-        <li><%= link_to "How it Works", "/about" %></li>
+        <li><%= link_to "Get Started", "/welcome2cloudspokes" %></li>
         <li><%= link_to "Blog", "http://blog.cloudspokes.com" %></li>
-        <li><%= link_to "FAQ", "/faq" %></li>
+        <li><%= link_to "Help", "http://community.cloudspokes.com", :target => '_blank' %></li>
+        <li><%= link_to "FAQ", "http://community.cloudspokes.com/cloudspokes/products/cloudspokes_faq_s", :target => '_blank' %></li>
         <% if current_user.nil? %>
 			<li><%= link_to "Login", "/login_popup", :class => "fancy" %></li>
 		<% else %>
