switched faq link

--- a/app/views/quiz_questions/index.html.erb
+++ b/app/views/quiz_questions/index.html.erb
@@ -12,7 +12,7 @@
 				questions you can review them for accuracy before being placed in the pool of available questions. <strong>We will pay $50 for each set of 
 				10 reviewed questions regardless of whether you approve or reject the question.</strong> </p>
 				
-			<p>Please review the <%= link_to "FAQs", faq_path %> for additional information on payments. <%= link_to "Click here", questions_reviewed_path %> to view the questions that you have reviewed and their payment status.</p>
+			<p>Please review the <a href="http://community.cloudspokes.com/cloudspokes/products/cloudspokes_faq_s" target="_blank">FAQs</a> for additional information on payments. <%= link_to "Click here", questions_reviewed_path %> to view the questions that you have reviewed and their payment status.</p>
 			
 			<% if @results['records'] %>
 			<table class="fancytable" id="answers" style="width:100%">
