fixed member pages

--- a/app/views/members/active_challenges.html.haml
+++ b/app/views/members/active_challenges.html.haml
@@ -10,4 +10,4 @@
       - @active_challenges.each do |active_challenge|
         = render "challenge", :challenge => active_challenge
 
-  = render "member-sidebar"
+  = render "member-sidebar-badgeville"
