--- a/app/views/members/past_challenges.html.haml
+++ b/app/views/members/past_challenges.html.haml
@@ -10,4 +10,4 @@
       - @past_challenges.each do |past_challenge|
         = render "challenge", :challenge => past_challenge
 
-  = render "member-sidebar"
+  = render "member-sidebar-badgeville"
