--- a/app/views/challenges/preview.html.erb
+++ b/app/views/challenges/preview.html.erb
@@ -43,7 +43,10 @@
 					<% if !@challenge_detail["Submission_Details__c"].nil? %>
                     	<p><%= raw(@challenge_detail["Submission_Details__c"]) %></p>
 					<% end %>
-					<p>Your submission will be judged by a panel of peers based upon <%= link_to 'this criteria', scorecard_display_url(@challenge_detail["Challenge_Id__c"]) %>.</p> 
+
+                    <% if ['Code','Design','Hackathon'].include?(@challenge_detail['Challenge_Type__c']) %>
+    					<p>Your submission will be judged by a panel of peers based upon <%= link_to 'this criteria', scorecard_display_url(@challenge_detail["Challenge_Id__c"]) %>.</p>
+                    <% end %> 
 
 					<% if !@challenge_detail["Additional_Info__c"].nil? %>
                     	<h3>Additional Info</h3>
